Corrected Header overlap and AddContact container top spacing

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,29 @@
 .App {
   text-align: center;
 }
+.topnav {
+  background-color: rgb(213, 213, 213);
+  /* border: dotted; */
+  border-bottom: 0.15em solid #282c34;
+  vertical-align: top;
+  margin-top: 0px;
+  left: 0;
+  top: 0;
+  position: fixed;
+  width: 100%;
+  height: 4em;
+  text-align: center;
+  z-index: 3;
+}
+
+.headtext {
+  padding-top: 0.75em;
+}
+
+.addcon {
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
 
 .App-logo {
   height: 40vmin;
